--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 h2 {
-  font-style: 2em;
+  font-size: 3em;
 }
 
 a {
@@ -74,20 +74,6 @@ hr {
   padding: 10px 20px 10px 20px;
   text-decoration: none;
 }
-/* 
-.bottom-container {
-  background-color: #306383;
-  padding: 50px 0 20px;
-} */
-
-/*
-Palette:
-#306383
-#9A67F0
-#D96888
-#F0A667
-#E6D563
-*/
 
 /* Unvisited */
 .body-link:link {
@@ -113,41 +99,6 @@ Palette:
 .footer-link:hover {
 	 color: rgb(16, 26, 16);
 }
-
-
-.footer-index {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  padding-top: 2rem;
-  background-color: #306383;
-}
-
-.footer {
-  background-color: #306383;
-  bottom: 0;
-  margin-top: 2rem;
-  padding-top: 2rem;
-}
-
-/* #page-container {
-  position: relative;
-  min-height: 100vh;
-} */
-
-/* #content-wrap {
-  padding-bottom: 13rem;  
-} */
-
-/* #footer {
-  background-color: #306383;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  padding-top: 3rem;
-  height: 10rem;        
-} 
-*/
 
 footer {
   padding-top: 20px;
